--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,20 +1,38 @@
+/* Navbar.module.css */
+
 .navbar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    background-color: #4caf50; /* You can change this to match the exact color of the SF Plants navigation bar */
-    color: white;
-    font-size: 20px;
-  }
-  
-  .navLink {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  
-  .navLink:hover {
-    color: #f5f5f5;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #000000; /* SF Plants navigation bar color */
+  color: white;
+  font-size: 20px;
+}
+
+.navLink {
+  color: white;
+  text-decoration: none;
+  margin: 0 15px;
+  transition: color 0.3s ease;
+}
+
+.navLink:hover {
+  color: #f5f5f5;
+}
+
+.icons {
+  display: flex;
+  justify-content: space-between;
+  width: 120px;
+}
+
+.icon {
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.icon:hover {
+  color: #f5f5f5;
+}
