--- a/src/components/PlantItem.module.css
+++ b/src/components/PlantItem.module.css
@@ -1,25 +1,38 @@
 /* PlantItem.module.css */
 .plantItem {
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .plantImage {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  
-  .addToCartButton {
-    background: #007b5e;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  transition: transform 0.2s ease-in-out;
+}
+
+.plantItem:hover {
+  transform: scale(1.05);
+}
+
+.plantLink {
+  text-decoration: none;
+  color: inherit;
+}
+
+.plantImage {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.nameAndPrice {
+  display: flex;
+  justify-content: center; /* Align the text to the center */
+  align-items: center; /* Align the text vertically */
+}
+
+.plantNameAndPrice {
+  font-size: 16px;
+  color: #007b5e;
+  font-weight: bold;
+  margin-top: 10px; /* Add some margin above the name and price */
+}
