--- a/src/components/PlantList.module.css
+++ b/src/components/PlantList.module.css
@@ -1,6 +1,10 @@
 /* PlantList.module.css */
 .plantList {
+  max-width: 960px; /* adjust this value to change how much empty space you want on the sides */
+  margin: auto; /* this will center your grid */
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr); /* this will create a 3 columns grid */
+  grid-template-rows: repeat(4, auto); /* this will create a 4 rows grid */
   gap: 20px;
+  padding: 20px; /* Add some padding */
 }
