I added styling to the webpage.

--- a/src/components/PlantDetail.module.css
+++ b/src/components/PlantDetail.module.css
@@ -17,6 +17,7 @@
 .plantImage {
   width: 100%;
   height: auto;
+  border-radius: 20px;
 }
 
 .detailText {
@@ -25,6 +26,7 @@
   flex-direction: column;
   align-items: center; /* Keep the center alignment */
   padding: 20px;
+  margin-top: 10%;
 }
 
 h2 {
@@ -58,7 +60,7 @@ h2 {
 }
 
 .addToCartButton {
-  background-color: #007b5e;
+  background-color: #b1d8b7;
   border: none;
   color: white;
   padding: 15px 32px;
