--- a/src/components/PlantItem.module.css
+++ b/src/components/PlantItem.module.css
@@ -32,7 +32,7 @@
 
 .plantNameAndPrice {
   font-size: 16px;
-  color: #007b5e;
+  color: #719977;;
   font-weight: bold;
   margin-top: 10px; /* Add some margin above the name and price */
 }
