--- a/src/components/Dropdown.module.css
+++ b/src/components/Dropdown.module.css
@@ -1,42 +1,44 @@
 /* Dropdown.module.css */
 
 .dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdownButton {
-  background-color: #F1ECE4;
-  color: black;
-  padding: 16px;
-  padding-top: 0;
-  font-size: 25px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropdownContent {
-  display: none;
-  position: absolute;
-  background-color: #F1ECE4;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  border-radius: 5px; /* Rounded edges */
-}
-
-.dropdownItem {
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  border-bottom: 1px solid green; /* Green line separator */
-}
-
-.dropdownItem:last-child {
-  border-bottom: none;
-}
-
-.dropdownItem:hover {
-  background-color: black;
-}
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdownButton {
+    background-color: #000000;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdownContent {
+    display: block;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdownItem {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdownItem:hover {
+    background-color: #f1f1f1;
+  }
+  
+  .dropdown:hover .dropdownButton {
+    background-color: #000000;
+  }
+  
+  .dropdown:hover .dropdownContent {
+    display: block;
+  }
+  
