--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -2,57 +2,37 @@
 
 .navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #F1ECE4; 
-  color: black;
-  font-size: 25px;
+  background-color: #000000; /* SF Plants navigation bar color */
+  color: white;
+  font-size: 20px;
 }
 
 .navLink {
-  color: black;
+  color: white;
   text-decoration: none;
+  margin: 0 15px;
   transition: color 0.3s ease;
 }
 
 .navLink:hover {
-  color: black;
+  color: #f5f5f5;
 }
 
 .icons {
   display: flex;
-  justify-content: space-around;
-  width: 200px; /* adjust as needed */
+  justify-content: space-between;
+  width: 120px;
 }
 
 .icon {
-  font-size: 25px;
-  color: black;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
 }
 
-.iconLink {
-  color: inherit;
-  text-decoration: none;
-}
-
-.logoContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.logo {
-  width: 100%;
-  height: 100%;
-}
-
-.menuItems {
-  display: flex;
-  justify-content: space-between;
-  width: 50%; /* adjust as needed */
+.icon:hover {
+  color: #f5f5f5;
 }
