--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
-    background-color: #b1d8b7;
-    color: #fff;
+    background-color: #F1ECE4;
+    color: black;
     padding: 30px 0;
     display: flex;
     justify-content: center;
