--- a/src/components/PlantList.module.css
+++ b/src/components/PlantList.module.css
@@ -8,14 +8,17 @@
   gap: 20px;
   padding: 20px; /* Add some padding */
 }
+
 .productsHeading {
-  text-align: center;
-  margin-bottom: 20px; /* adjust as needed */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .lineSeparator {
   width: 5%;
   height: 1px;
-  background-color: #000; /* or any color you want */
-  margin-bottom: 30px; /* adjust as needed */
+  background-color: #000;
+  margin-bottom: 30px;
 }
