--- a/src/components/LandingPage.module.css
+++ b/src/components/LandingPage.module.css
@@ -1,41 +1,50 @@
 .landingPage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh; /* Adjust this as necessary */
-    background-image: url('./Hero.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Added to center items vertically */
+  align-items: center; /* Ensure items are centered horizontally */
+  height: 100vh; /* Adjusted to full viewport height */
+  background-image: url('./Hero.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
   
-  .heroContent {
-    text-align: center;
-  }
+.heroContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 35%; /* Adjusted from 80% to 40% */
+  padding: 20px;
+  border-radius: 10px;
+}
   
-  .title {
-    font-size: 2.5em;
-    color: white;
-    margin-bottom: 0.5em;
-  }
+.title {
+  font-size: 2.5em;
+  color: white;
+  margin-bottom: 0.5em;
+}
   
-  .subtitle {
-    font-size: 1.5em;
-    color: white;
-    margin-bottom: 1em;
-  }
+.subtitle {
+  font-size: 1.5em;
+  color: white;
+  margin-bottom: 1em;
+}
   
-  .shopNowButton {
-    font-size: 1.2em;
-    padding: 0.5em 1em;
-    color: white;
-    background-color: #8ac493; /* Match the color scheme of your site */
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
+.shopNowButton {
+  font-size: 1.2em;
+  padding: 0.5em 1em;
+  color: white;
+  background-color: #8ac493;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border-radius: 10px; /* This will give your button rounded corners */
+}
   
-  .shopNowButton:hover {
-    background-color: #6ba378; /* Slightly darker shade for hover effect */
-  }
-  
+.shopNowButton:hover {
+  background-color: #6ba378;
+}
