--- a/src/components/PlantItem.module.css
+++ b/src/components/PlantItem.module.css
@@ -36,3 +36,20 @@
   font-weight: bold;
   margin-top: 10px; /* Add some margin above the name and price */
 }
+
+@media (max-width: 768px) {
+  .plantNameAndPrice {
+    font-size: 18px; /* Increased font size for better readability on mobile */
+  }
+
+  .plantItem {
+    padding: 15px; /* Increase padding for a more touch-friendly design */
+  }
+
+  /* If you're using hover effects for functionality (like showing more info),
+     you might want to always show that info on mobile or find another way to present it.
+     If it's just for styling, you can ignore this. */
+  .plantItem:hover {
+    transform: none;
+  }
+}
