--- a/src/components/AccessoryItem.module.css
+++ b/src/components/AccessoryItem.module.css
@@ -37,4 +37,41 @@
     font-weight: bold;
     margin-top: 10px; /* Add some margin above the name and price */
   }
-  
+  @media (max-width: 768px) {
+    .detailContainer {
+        flex-direction: column;  
+        gap: 20px;
+        padding: 10px;
+    }
+    
+    .imageContainer,
+    .detailText {
+        max-width: 100%;
+        flex: none; /* Resets flex values for stacking */
+    }
+
+    h2 {
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+
+    .description {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    .price {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .separator {
+        width: 20%;
+        margin: 20px auto;
+    }
+    
+    .addToCartButton {
+        font-size: 16px;
+        padding: 10px 20px;
+    }
+}
