--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -57,3 +57,35 @@
   align-items: center; /* added to vertically align items */
   width: 50%; /* adjust as needed */
 }
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    padding: 10px;
+    font-size: 18px;
+  }
+
+  .icons {
+    width: 100%;
+    justify-content: center; /* Center the icons on mobile for a cleaner look */
+    margin-top: 15px;
+    gap: 15px; /* Adding gap for better spacing */
+  }
+
+  .logoContainer {
+    width: 150px;
+    height: 150px;
+    margin-bottom: 15px; /* Added margin for better spacing between logo and menu items */
+  }
+
+  .icon {
+    font-size: 20px;
+  }
+
+  .menuItems {
+    flex-direction: column;
+    align-items: center; /* Center align menu items */
+    width: 100%;
+    gap: 10px; /* Adjust gap as per your preference */
+  }
+}                                                       
