--- a/src/components/PlantDetail.module.css
+++ b/src/components/PlantDetail.module.css
@@ -76,3 +76,44 @@ h2 {
 .addToCartButton:active {
   background-color: #00563f; /* Change color when button is clicked */
 }
+
+@media only screen and (max-width: 768px) {
+  .detailContainer {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .imageContainer {
+    max-width: 100%;
+  }
+
+  .detailText {
+    padding: 10px;
+  }
+
+  h2 {
+    font-size: 32px;
+    margin-bottom: 15px;
+  }
+
+  .description {
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+
+  .price {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .separator {
+    width: 50%;
+    margin: 20px auto;
+  }
+
+  .addToCartButton {
+    font-size: 18px;
+    padding: 10px 24px;
+  }
+}
