--- a/src/components/PlantList.module.css
+++ b/src/components/PlantList.module.css
@@ -22,3 +22,20 @@
   background-color: #000;
   margin-bottom: 30px;
 }
+
+@media only screen and (max-width: 768px) {
+  .plantList {
+    grid-template-columns: repeat(1, 1fr); /* Change to a single column grid for smartphones */
+    gap: 10px;
+    padding: 10px;
+  }
+
+  .productsHeading {
+    margin-bottom: 15px;
+  }
+
+  .lineSeparator {
+    width: 50%; /* Increase the width of the line separator for better visibility on smaller screens */
+    margin-bottom: 20px;
+  }
+}
